Fix - Event page card image overflow

--- a/web/themes/custom/hm-public-theme/static/sass/pages/_events.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_events.scss
@@ -66,6 +66,10 @@
         margin-right: 0;
       }
 
+      .bio-card--image {
+        max-height: 175px;
+      }
+
     }//a
 
     @supports (-webkit-appearance: none) {
